test/cases/compile_errors/invalid_duplicate_test_decl_name.zig
test "thingy" {}
test "thingy" {}

// error
// backend=stage2
// target=native
// is_test=true
//
// :2:1: error: duplicate test name 'thingy'
// :1:1: note: other test here
